# c-marpaWrapper

./: .appveyor.yml  CMakeLists.txt  CMakeObjects.PL  git_subtree_pull.zsh
amalgamation/: marpaWrapper.c
cmake/: MyPackageDependency.cmake
include/: config.h.in
include/marpaWrapper/: value.h
include/marpaWrapper/internal/: _logging.h
libmarpa/work/stage/: libmarpa_version.sh  marpa.c  marpa.h  marpa_ami.c  marpa_ami.h  marpa_avl.c  marpa_avl.h  version.m4
libmarpa/work/stage/win32/: marpa.def
src/: asf.c  grammar.c  recognizer.c  value.c
test/: marpaWrapperAsfAmbiguousTester.c  marpaWrapperAsfTester.c  marpaWrapperAsfValueTester.c  marpaWrapperTester.c
